add spotcast key

--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -24,14 +24,16 @@ stringData:
   HASS_SECRET_DARK_SKY_API_KEY: ENC[AES256_GCM,data:7/0ECwIhKBEp22/6ZkIMfD/9W2iExfd+q2R65qyGS9c=,iv:tU6s5Cve0/HtT+75HBvtVAbU+BroLgOqICmUx0ojWcs=,tag:Esnut7uKIK/ijeCEzPmH6w==,type:str]
   HASS_SECRET_MIELE_CLIENT_ID: ENC[AES256_GCM,data:zYHCCAJqaxMi8OKA6Lmd7Q6b4OqQX4cJOmC2cMoXfZ2CRqGi,iv:a1GxPh1d74KQBwQnJQNvsaqg00GWseXm16pRpa10Kmw=,tag:HQAIVRxRQOl/kNEsxv3EmA==,type:str]
   HASS_SECRET_MIELE_CLIENT_SECRET: ENC[AES256_GCM,data:ekF1pOfZt2QIppb9TpYwFujgSgf9rnMUaKabMD6ZUeA=,iv:mB7esiT6Fm8yoBnzPIqJ0BMaXxTDu/vKwbPoRc//IQk=,tag:Nera4ldiT6aAxBLG19Ryvg==,type:str]
+  HASS_SECRET_SP_DC: ENC[AES256_GCM,data:zHUvCP5C0U+WXOho98bTjhRQdtJRSxnhcKg3/vI/xRRX/uuNkPmMK8pdZ/M/+kORTbYSvZjjoujqAKH0Y8PJh3Zy92/mtbEn5dLbY7XoajSo1omyzVknZ+crDEHl7EVpeJjrFmPZGhvDF05zm/E=,iv:mCIOZKny7bVG5pOP1F4xvkfeT4swTMGGey2j2xTZe2M=,tag:OukyCBEO+t7b5fNgB2VflQ==,type:str]
+  HASS_SECRET_SP_KEY: ENC[AES256_GCM,data:9DlMXcU2vUfuYAwiQhaM85+AaFk2e+wPgQHsASYg8IN8/brB,iv:iZXG51tyUTWa7l84JETu3jK+3uiAQSrQzvMooRTd2H8=,tag:ujdgEWHJEDUDSnUP6Sz1vQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-03T18:15:36Z"
-  mac: ENC[AES256_GCM,data:9hq5G7qC7b65Z4LmDMaWZBWSS8ZBqahsKe3RDj8MobxfNXp5tEj0mmw3ZYIkSr9JbDPVJdMeRuNdq3qrj25gQP07pNBjOCxj7bTY7iyzlClV1GjBcbIJZyrKs5mv0c5FRhxCZfjNeDuv2jPSWvxMbwJ8YXxIY4QyXZ1hwrDqvgA=,iv:S3ixBB5j1NQRepGvHS2dF5rMWpI367WHZ0vxcv05ceU=,tag:fkD+gyfCWSesAYE6augHEA==,type:str]
+  lastmodified: "2021-08-06T21:37:24Z"
+  mac: ENC[AES256_GCM,data:pnLHldN2fnf9ptKU0pPavLiGUJKBl3FPtjub1CNm8zp3R2M/SRbfBeHXG0+0Lhf6w8/gAYt4oV/b77rOyytoTXMxe4MGcHtN1rB3qouicbe1PGv3ApcecUb+u5y1cv3HqX3CZPf5XYlNhjYAHWgaVqNVYmlhA2gFFdkW2+PhCk4=,iv:fyDNjTxAw1ITwWSqjw2eaoo3ClsoZ0IT2sOPZDR2FS4=,tag:FDiDnP1VY548TUKv2Aj/SA==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
