--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -90,7 +90,7 @@ spec:
             kubernetes.io/tls-acme: "true"
             cert-manager.io/cluster-issuer: letsencrypt-production
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-            traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+            traefik.ingress.kubernetes.io/router.middlewares: "network-external-auth@kubernetescrd"
             external-dns/is-public: "true"
             external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           hosts:
