add cert names to joplin and vikunja

--- a/cluster/apps/collab/joplin/helm-release.yaml
+++ b/cluster/apps/collab/joplin/helm-release.yaml
@@ -73,6 +73,7 @@ spec:
         tls:
           - hosts:
               - "joplin.${SECRET_DOMAIN}"
+            secretName: joplin-cert
 
     postgresql:
       # existingSecret: joplin-postgresql-secret
