--- a/cluster/apps/collab/vikunja/helm-release.yaml
+++ b/cluster/apps/collab/vikunja/helm-release.yaml
@@ -81,6 +81,7 @@ spec:
         tls:
           - hosts:
               - "tasks.${SECRET_DOMAIN}"
+            secretName: vikunja-cert
 
     persistence:
       files:
