--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - external-secrets
   - kube-cleanup-operator
   - metrics-server
-  - nginx
+  # - nginx
   - node-feature-discovery
   - rbac
   # - registry-creds
