move object bucket definitions to rook-ceph deployment

--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -11,3 +11,5 @@ resources:
   - ceph-object-store.yaml
   - ceph-bucket-storage-class.yaml
   - ceph-object-bucket.yaml
+  - loki-ceph-object-bucket.yaml
+  - thanos-ceph-object-bucket.yaml
