add interface back into config

--- a/cluster/core/kube-system/kube-vip/daemon-set.yaml
+++ b/cluster/core/kube-system/kube-vip/daemon-set.yaml
@@ -43,8 +43,8 @@ spec:
               value: "5"
             - name: bgp_enable
               value: "true"
-            # - name: bgp_routerinterface
-            #   value: "eno1"
+            - name: bgp_routerinterface
+              value: "eth0"
             - name: bgp_as
               value: "64512"
             - name: bgp_peeraddress
