--- a/cluster/apps/default/teedy/kustomization.yaml
+++ b/cluster/apps/default/teedy/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- teedy-helm-values.yaml
+# - teedy-helm-values.yaml
 - helm-release.yaml
