--- a/cluster/apps/default/monica/helm-release.yaml
+++ b/cluster/apps/default/monica/helm-release.yaml
@@ -30,6 +30,10 @@ spec:
       MAIL_FROM_NAME: "Home CRM"
       APP_EMAIL_NEW_USERS: ryan@ryanholt.net
       DEFAULT_MAX_STORAGE_SIZE: 4096
+      APP_KEY: $MONICA_APP_KEY
+      DB_DATABASE: ${SECRET_MONICA_DB_DATABASE}
+      DB_USERNAME: ${MONICA_DB_USERNAME}
+      DB_PASSWORD: ${MONICA_DB_PASSWORD}
     ingress:
       main:
         enabled: true
@@ -52,11 +56,12 @@ spec:
         existingClaim: monica-pvc
     mariadb:
       enabled: true
+      auth:
+        database: ${SECRET_MONICA_DB_DATABASE}
+        username: ${SECRET_MONICA_DB_USERNAME}
+        password: ${SECRET_MONICA_DB_PASSWORD}
+        rootPassword: ${SECRET_MONICA_DB_ROOTPASSWORD}
       primary:
         persistence:
           enabled: true
           existingClaim: monica-mariadb-0-pvc
-  valuesFrom:
-  - kind: Secret
-    name: "monica-helm-values"
-    optional: false
