force traefik to worker nodes

--- a/cluster/apps/network/traefik/helm-release.yaml
+++ b/cluster/apps/network/traefik/helm-release.yaml
@@ -74,6 +74,8 @@ spec:
     experimental:
       plugins:
         enabled: true
+    nodeSelector:
+      node-role.kubernetes.io/worker: "true"
     # affinity:
     #   podAntiAffinity:
     #     requiredDuringSchedulingIgnoredDuringExecution:
