--- a/cluster/apps/collab/bitwarden/bitwarden-secrets.enc.yaml
+++ b/cluster/apps/collab/bitwarden/bitwarden-secrets.enc.yaml
@@ -3,7 +3,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: bitwarden-secrets
-  namespace: default
+  namespace: collab
 data:
   adminToken: ENC[AES256_GCM,data:aqr1CT2yhxrpDEFNKQflQUe9Gl32D5VnJ3a0agfDBwNoeTXbNFEPhGezo6RBpzekIPzrUGUj8tRHLpyqcoIEaDMTS7NpKcVMeRXc5oal0nRXUi7TfHImuA==,iv:qv+OnVAWftQmNkZYismIW84FdBQ8p/d81cKxySIodq8=,tag:PXe+hFJ0RoM4M+qYL30oMQ==,type:str]
   yubikeyClientID: ENC[AES256_GCM,data:FO0AK5v9hkM=,iv:k4AWuH/jpxgp9G8LzK9KqzIPuxXxL+HSwhWt9fX3gZI=,tag:vYEAoIytMWMejPjwrWJHyA==,type:str]
@@ -13,8 +13,9 @@ sops:
   gcp_kms: []
   azure_kv: []
   hc_vault: []
-  lastmodified: "2021-02-23T14:43:30Z"
-  mac: ENC[AES256_GCM,data:8B0hGU8Vt+tPiEx0rwABBQFuCQVN4RtidCgYJ+ZUhLxFZzZ3LDhrQoxFd5vJkW3ON6kDTXiXnc9ij3fh4s07wp8C3umli73MPL/dP7Hvv4j+rgZR+sEkw5BSDCiVKkuRgCXg21H/HfJsRMaOJFc6FCWe1MHz8oStp46/easxtlE=,iv:NVU4TpK4Ej0yQnhie5iQFrgQKWDOhbz0foheCpQ/ZNQ=,tag:IKxvohnKDrAqd0Trn+JTsw==,type:str]
+  age: []
+  lastmodified: "2021-08-11T00:30:50Z"
+  mac: ENC[AES256_GCM,data:CGXxDD3ZRjJyBoB+LTEsJR/fvWtDfMG7CLO5xB5/Qe75NPG6F9tj8O5m/MLvbcvRUm40ypP4/iW6k/4ErH+samH+/3nTTfkdiyaBS7MaRZFcUl88JPPsyTUTbkMZhDmqsJw+IWyABoXR3ZjPIlFd+XdsVzSf8KnZHPq5jTkg3aY=,iv:0TQg9nzAFzzCTEfXj8ucfSsG0fktI4hGLuSf+Rd7aPw=,tag:J0OXOrOs+tQTz8csAqRbHw==,type:str]
   pgp:
     - created_at: "2021-02-23T14:43:29Z"
       enc: |
@@ -57,4 +58,4 @@ sops:
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
-  version: 3.6.1
+  version: 3.7.1
