--- a/cluster/apps/collab/bitwarden/helm-release.yaml
+++ b/cluster/apps/collab/bitwarden/helm-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: bitwarden
-  namespace: default
+  namespace: collab
 spec:
   releaseName: bitwarden
   interval: 5m
