--- a/cluster/apps/default/kustomization.yaml
+++ b/cluster/apps/default/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - _pvc
-- bitwarden
+# - bitwarden
 # - bookstack
 # - goldilocks
 - monica
