add nodeselectors to externalIP charts

--- a/cluster/apps/collab/gitea/helm-release.yaml
+++ b/cluster/apps/collab/gitea/helm-release.yaml
@@ -97,3 +97,5 @@ spec:
         serviceMonitor:
           enabled: true
           namespace: default
+    nodeSelector:
+      node-role.kubernetes.io/worker: "true"
