--- a/cluster/apps/kube-system/nginx/helm-release.yaml
+++ b/cluster/apps/kube-system/nginx/helm-release.yaml
@@ -55,3 +55,5 @@ spec:
           cpu: 25m
         limits:
           memory: 350Mi
+    nodeSelector:
+      node-role.kubernetes.io/worker: "true"
