--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -75,30 +75,32 @@ spec:
         cpu: 500m
       limits:
         memory: 6000Mi
-    # prometheus:
-    #   podMonitor:
-    #     enabled: true
-    #     interval: 10m
-    #     scrapeTimeout: 2m
-    # additionalContainers:
-    #   - name: exporter
-    #     image: esanchezm/prometheus-qbittorrent-exporter:latest
-    #     imagePullPolicy: IfNotPresent
-    #     env:
-    #       - name: QBITTORRENT_HOST
-    #         value: "http://localhost"
-    #       - name: QBITTORRENT_PORT
-    #         value: "8080"
-    #       # - name: QBITTORRENT_USER
-    #       #   value: "${SECRET_QB_USER}"
-    #       # - name: QBITTORRENT_PASS
-    #       #   value: "${SECRET_QB_PASSWORD}"
-    #       - name: EXPORTER_PORT
-    #         value: "9022"
-    #       - name: EXPORTER_LOG_LEVEL
-    #         value: "INFO"
-    #       - name: METRICS_PREFIX
-    #         value: "qbittorrent"
-    #     ports:
-    #       - name: metrics
-    #         containerPort: 9022
+    prometheus:
+      podMonitor:
+        enabled: true
+        interval: 10m
+        scrapeTimeout: 2m
+    additionalContainers:
+      - name: exporter
+        image: esanchezm/prometheus-qbittorrent-exporter:latest
+        imagePullPolicy: IfNotPresent
+        env:
+          - name: QBITTORRENT_HOST
+            value: "http://localhost"
+          - name: QBITTORRENT_PORT
+            value: "8080"
+          # - name: QBITTORRENT_USER
+          #   value: "${SECRET_QB_USER}"
+          # - name: QBITTORRENT_PASS
+          #   value: "${SECRET_QB_PASSWORD}"
+          - name: EXPORTER_PORT
+            value: "9022"
+          - name: EXPORTER_LOG_LEVEL
+            value: "INFO"
+          - name: METRICS_PREFIX
+            value: "qbittorrent"
+        ports:
+          - name: metrics
+            containerPort: 9022
+    nodeSelector:
+      node-role.kubernetes.io/worker: "true"
