--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
       interval: 5m
   values:
     image:
-      repository: esphome/esphome
+      repository: ghcr.io/esphome/esphome
       tag: 1.20.4
     env:
       TZ: "America/New_York"
