--- a/cluster/apps/collab/_pvc/nfs-home-stefanie.yaml
+++ b/cluster/apps/collab/_pvc/nfs-home-stefanie.yaml
@@ -2,24 +2,25 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-tank-share-pv
+  name: nfs-home-stefanie-pv
 spec:
   capacity:
     storage: 1Mi
   accessModes:
     - ReadWriteMany
   claimRef:
-    namespace: default
-    name: nfs-tank-share-pvc
+    namespace: collab
+    name: nfs-home-stefanie-pvc
   storageClassName: nfs
   nfs:
     server: "nas.${SECRET_DOMAIN}"
-    path: "/mnt/tank/share"
+    path: "/mnt/tank/home/stefanie"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-tank-share-pvc
+  name: nfs-home-stefanie-pvc
+  namespace: collab
 spec:
   accessModes:
     - ReadWriteMany
