--- a/cluster/apps/collab/_pvc/nfs-pictures.yaml
+++ b/cluster/apps/collab/_pvc/nfs-pictures.yaml
@@ -2,25 +2,25 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-home-ryan-pv
+  name: nfs-pictures-pv
 spec:
   capacity:
     storage: 1Mi
   accessModes:
     - ReadWriteMany
   claimRef:
-    namespace: default
-    name: nfs-home-ryan-pvc
+    namespace: collab
+    name: nfs-pictures-pvc
   storageClassName: nfs
   nfs:
     server: "nas.${SECRET_DOMAIN}"
-    path: "/mnt/tank/home/ryan"
+    path: "/mnt/tank/share/pictures"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-home-ryan-pvc
-  namespace: default
+  name: nfs-pictures-pvc
+  namespace: collab
 spec:
   accessModes:
     - ReadWriteMany
