--- a/cluster/apps/collab/_pvc/nfs-tank-share.yaml
+++ b/cluster/apps/collab/_pvc/nfs-tank-share.yaml
@@ -2,25 +2,25 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-backup-share-pv
+  name: nfs-tank-share-pv
 spec:
   capacity:
     storage: 1Mi
   accessModes:
     - ReadWriteMany
   claimRef:
-    namespace: default
-    name: nfs-backup-share-pvc
+    namespace: collab
+    name: nfs-tank-share-pvc
   storageClassName: nfs
   nfs:
-    server: "nas-1.${SECRET_DOMAIN}"
-    path: "/mnt/backup/share"
+    server: "nas.${SECRET_DOMAIN}"
+    path: "/mnt/tank/share"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-backup-share-pvc
-  namespace: default
+  name: nfs-tank-share-pvc
+  namespace: collab
 spec:
   accessModes:
     - ReadWriteMany
