--- a/cluster/apps/collab/kustomization.yaml
+++ b/cluster/apps/collab/kustomization.yaml
@@ -2,9 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - _pvc
   - bitwarden
   # - forecastle
   - gitea
   # - openkm
   # - joplin
+  - monica
+  - teedy
   - vikunja
