--- a/cluster/apps/default/kustomization.yaml
+++ b/cluster/apps/default/kustomization.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- _pvc
+# - _pvc
 # - bitwarden
 # - bookstack
 # - goldilocks
-- monica
+# - monica
 # - nextcloud
-- teedy
+# - teedy
