--- a/cluster/apps/collab/_pvc/kustomization.yaml
+++ b/cluster/apps/collab/_pvc/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 # - nfs-backup-share.yaml
-- nfs-home-ryan.yaml
-- nfs-home-stefanie.yaml
-- nfs-pictures.yaml
-- nfs-tank-share.yaml
+- collab-nfs-home-ryan.yaml
+- collab-nfs-home-stefanie.yaml
+- collab-nfs-pictures.yaml
+- collab-nfs-tank-share.yaml
