--- a/cluster/apps/collab/monica/helm-release.yaml
+++ b/cluster/apps/collab/monica/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: monica
-  namespace: default
+  namespace: collab
 spec:
   releaseName: monica
   interval: 5m
