--- a/cluster/apps/collab/teedy/helm-release.yaml
+++ b/cluster/apps/collab/teedy/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: teedy
-  namespace: default
+  namespace: collab
 spec:
   interval: 5m
   releaseName: teedy
