fix env variables for monica

--- a/cluster/apps/collab/monica/helm-release.yaml
+++ b/cluster/apps/collab/monica/helm-release.yaml
@@ -30,10 +30,10 @@ spec:
       MAIL_FROM_NAME: "Home CRM"
       APP_EMAIL_NEW_USERS: ryan@ryanholt.net
       DEFAULT_MAX_STORAGE_SIZE: 4096
-      APP_KEY: $MONICA_APP_KEY
+      APP_KEY: ${SECRET_MONICA_APP_KEY}
       DB_DATABASE: ${SECRET_MONICA_DB_DATABASE}
-      DB_USERNAME: ${MONICA_DB_USERNAME}
-      DB_PASSWORD: ${MONICA_DB_PASSWORD}
+      DB_USERNAME: ${SECRET_MONICA_DB_USERNAME}
+      DB_PASSWORD: ${SECRET_MONICA_DB_PASSWORD}
     ingress:
       main:
         enabled: true
