--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -35,7 +35,7 @@ stringData:
   SECRET_MAILGUN_USERNAME: ENC[AES256_GCM,data:BFUjcoP0zlWBXr9F/IZxcHHM7vJOmeo=,iv:o3FZGTvVoB59URlzEoRnpAINI183EeQC7Sf6b50KdNA=,tag:BSPpGRZFV45ZAI8HoV24sg==,type:str]
   SECRET_MAILGUN_PASSWORD: ENC[AES256_GCM,data:0xAqp2/alfrJo4HCLxOSNzcYMMRI9Cx56d3ibd0oVUcAQYQP/UDd+lvDSZuTra4crLA=,iv:UJUF39rYs9ks+BiZMAQD7PFI5bDcl63siBs5V0Qs7/c=,tag:hRtL/tJl8a5Eyi/ZCvP4tQ==,type:str]
   SECRET_MAILU_POSTMASTER_PASSWORD: ENC[AES256_GCM,data:HfTzfFeGXl9HGnSTS8FV,iv:0/5SX2aoeFy8LhxEn14mhzFmUbKe0rltkrKKddzEBHU=,tag:U/aWV9Qz7nWv+GwSda9THA==,type:str]
-  SECRET_MAILU_SECRET_KEY: ENC[AES256_GCM,data:CcvLkAFHSeI=,iv:295/zU68dXx5eXX9Zo64OYzg2HQx2nOcvc3LkAHFDhs=,tag:0l9KBheYmbn8Q04CdJxipA==,type:str]
+  SECRET_MAILU_SECRET_KEY: ENC[AES256_GCM,data:OIgvo6QvdVL4jTLTXf0gswBL/jJ7VUvKQfykdaIvfkw=,iv:qUExZDHaYi6dECiJiOHnp6gUyjJnkaWAq15Mf066sWg=,tag:wrby3vxvg1D8ljVU+xxybg==,type:str]
   SECRET_DEX_VULTR_CLIENT_SECRET: ENC[AES256_GCM,data:6Ps7r64zv/ltEYjRZcKGg+qHiVMPUOe1VGUg9ALZdytNQOp8eonHA5Nl,iv:ZWGEc+pBLbyMhBq7C+5c67j6G/CWVTtcL/FY5aoVyCE=,tag:PLPpvtwj3yIKn9IpFq1AZg==,type:str]
   SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:Qad8DU4CpSrbmBBGQKNB08d9U8YI39QVdSKsnXDB78N2ADC3/hHVal4m3hBgEzwpWJOjWCJKKaipgVRMa3bc/Cu2zRLL7Vp56mkcJLV8AUW2nweX3CUspkdaQ/jaShr9Em6GWwQZ978k7RzdQ/XOw16I4QmgJfgISLBqct/B,iv:4a6M3SFx57vMZHZv9bJME0FwDHHKoHiPBPegvmhOxMc=,tag:FZyyKZKKPMtcFc6iLBhnvw==,type:str]
   SECRET_JOPLIN_POSTGRES_PASSWORD: ENC[AES256_GCM,data:JjsownH2fg9ooNx0nt4uUkTQnC8SWj8X5gWb7g==,iv:3YP8m/2oI0XbLalxEhHkU3MZivMhqVGGn8oTZeOoxpU=,tag:MhChRkokrNW97srcj/9amA==,type:str]
@@ -57,8 +57,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-10T22:09:22Z"
-  mac: ENC[AES256_GCM,data:lSLLTo03Rp58DcmnWZ/lSaNjQrDjF4oowrdE1ehsJXWA2wGkEKKTssUt/23m6Xz4IK6PWGXwalpsIg8dEJt4DmxKmITlZZ/EDq1+z/T2TaR3WWTmOhZZ3WwfAN2o/PTpqsBrbBSZ8jOefdzDH5qKjHKlui06oz8s5YwQ00haPD0=,iv:Uoxv8XTgyjbgYq43f3k5I5ti/sRKuN07Ka+ckgrlC0I=,tag:TOI74cwKI7e+jeLDzv97pQ==,type:str]
+  lastmodified: "2021-08-11T21:25:44Z"
+  mac: ENC[AES256_GCM,data:c7XXa0j77hTEj1DBguu5lzeExUU205pEvrySTnWf13qsAEJor/qQa7OFV5Z0kBNXtAf8elVdxRg2d/ENDyz+JT4RK+UYglv7L/iQiuphqADvMPkRvHJS5A+hD61lr2Pj+oybjPvpbBJ2LWb+PFAA6NpkNf9+20cZOHtoBxpty5Y=,iv:7SVN0kOvX6ngGKlRyTjRQ1L9Q2GykrFGfNi4o6prj5s=,tag:tAptku+K3ihwznQjXxLODw==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
