hardcoded initial limits so we'll set these higher

--- a/cluster/apps/mail/mailu/helm-release.yaml
+++ b/cluster/apps/mail/mailu/helm-release.yaml
@@ -53,3 +53,6 @@ spec:
         requests:
           cpu: 200m
           memory: 100Mi
+        limits:
+          cpu: 2000m
+          memory: 1500Mi
