move postrenderer to the proper spot

--- a/cluster/apps/mail/mailu/helm-release.yaml
+++ b/cluster/apps/mail/mailu/helm-release.yaml
@@ -56,3 +56,13 @@ spec:
         limits:
           cpu: 2000m
           memory: 1500Mi
+postRenderers:
+  - kustomize:
+      patchesJson6902:
+        - target:
+            kind: Deployments
+            name: mailu-front
+          patch:
+            - op: add
+              path: /spec/template/spec/hostname
+              value: mailu-front
