ingress for mail can be publicly created and routed

--- a/cluster/apps/mail/mailu/helm-release.yaml
+++ b/cluster/apps/mail/mailu/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
     logLevel: INFO
     ingress:
       annotations:
-        external-dns/is-public: "false"
+        external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       hosts:
         - "mail.${SECRET_DOMAIN}"
