--- a/cluster/apps/mail/mailu/helm-release.yaml
+++ b/cluster/apps/mail/mailu/helm-release.yaml
@@ -58,7 +58,7 @@ spec:
           cpu: 2000m
           memory: 1500Mi
     fetchmail:
-      enabled: true
+      enabled: false
       logLevel: WARNING
   postRenderers:
     - kustomize:
