--- a/cluster/apps/mail/mailu/helm-release.yaml
+++ b/cluster/apps/mail/mailu/helm-release.yaml
@@ -58,8 +58,8 @@ spec:
           cpu: 2000m
           memory: 1500Mi
     fetchmail:
-      enabled: false
-      logLevel: WARNING
+      enabled: true
+      logLevel: DEBUG
   postRenderers:
     - kustomize:
         patchesJson6902:
