try using internal mail relay

--- a/cluster/apps/collab/joplin/helm-release.yaml
+++ b/cluster/apps/collab/joplin/helm-release.yaml
@@ -46,11 +46,11 @@ spec:
       POSTGRES_USER: joplin
       POSTGRES_PASSWORD: ${SECRET_JOPLIN_POSTGRES_PASSWORD}
       MAILER_ENABLED: 1
-      MAILER_HOST: smtp.mailgun.org
-      MAILER_PORT: 465
+      MAILER_HOST: mailu-front.mail.svc.cluster.local
+      MAILER_PORT: 25
       MAILER_SECURE: 1
-      MAILER_AUTH_USER: ${SECRET_MAILGUN_USERNAME}
-      MAILER_AUTH_PASSWORD: ${SECRET_MAILGUN_PASSWORD}
+      # MAILER_AUTH_USER: ${SECRET_MAILGUN_USERNAME}
+      # MAILER_AUTH_PASSWORD: ${SECRET_MAILGUN_PASSWORD}
       MAILER_NOREPLY_NAME: Joplin
       MAILER_NOREPLY_EMAIL: noreply@${SECRET_DOMAIN}
 
