--- a/cluster/apps/network/unifi/helm-release.yaml
+++ b/cluster/apps/network/unifi/helm-release.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
       chart: unifi
-      version: 2.0.4
+      version: 4.0.0
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -21,47 +21,43 @@ spec:
     image:
       repository: jacobalberty/unifi
       tag: v6.2.26
-    persistence:
-      enabled: true
-      existingClaim: unifi-pvc
-    timezone: "America/New_York"
-    runAsRoot: true
+
+    env:
+      TZ: America/New_York
+
     ingress:
-      enabled: true
-      ingressClassName: "traefik"
-      annotations:
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: letsencrypt-production
-        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-        external-dns/is-public: "true"
-        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-      hosts:
-        - "unifi.${SECRET_DOMAIN}"
-      tls:
-        - hosts:
-            - "unifi.${SECRET_DOMAIN}"
-          secretName: unifi-cert
-    guiService:
-      type: LoadBalancer
-      externalIPs:
-        - 10.45.10.17
-    controllerService:
-      type: LoadBalancer
-      externalTrafficPolicy: Local
-      externalIPs:
-        - 10.45.10.17
-    stunService:
-      type: LoadBalancer
-      externalTrafficPolicy: Local
-      externalIPs:
-        - 10.45.10.17
-    discoveryService:
-      type: LoadBalancer
-      externalTrafficPolicy: Local
-      externalIPs:
-        - 10.45.10.17
+      main:
+        enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+        hosts:
+          - "unifi.${SECRET_DOMAIN}"
+        tls:
+          - hosts:
+              - "unifi.${SECRET_DOMAIN}"
+            secretName: unifi-cert
+    service:
+      main:
+        type: LoadBalancer
+        annotations:
+          coredns.io/hostname: unifi
+          traefik.ingress.kubernetes.io/service.serversscheme: https
+        loadBalancerIP: 10.45.10.17
+        externalTrafficPolicy: Local
+
     nodeSelector:
       node-role.kubernetes.io/worker: "true"
+
+    persistence:
+      data:
+        enabled: true
+        existingClaim: unifi-pvc
+
     resources:
       requests:
         memory: 500Mi
