add mailu ingress annotations for traefik

--- a/cluster/apps/mail/mailu/helm-release.yaml
+++ b/cluster/apps/mail/mailu/helm-release.yaml
@@ -36,6 +36,10 @@ spec:
       annotations:
         external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+        kubernetes.io/ingress.class: traefik
+        kubernetes.io/tls-acme: "true"
+        cert-manager.io/cluster-issuer: letsencrypt-production
+        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
       hosts:
         - "mail.${SECRET_DOMAIN}"
       tls:
