fix claim name info for postgresql in teedy

--- a/cluster/apps/collab/teedy/helm-release.yaml
+++ b/cluster/apps/collab/teedy/helm-release.yaml
@@ -68,7 +68,7 @@ spec:
       postgresqlPassword: ${SECRET_TEEDY_POSTGRESQL_PASSWORD}
       persistence:
         enabled: true
-        storageClass: rook-ceph
+        existingClaim: rook-data-teedy-postgresql-0
     # additionalContainers:
     # - name: docs-importer
     #   image: sismics/docs-importer:latest
