--- a/cluster/core/cert-manager/kustomization.yaml
+++ b/cluster/core/cert-manager/kustomization.yaml
@@ -2,7 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- helm-release.yaml
-- letsencrypt-production.yaml
-- letsencrypt-staging.yaml
-- azuredns-config.enc.yaml
+  - helm-release.yaml
+  - cloudflare-token-secret.enc.yaml
+  - letsencrypt-production.yaml
+  - letsencrypt-staging.yaml
+  - azuredns-config.enc.yaml
