flip to cloudflare for letsencrypt

--- a/cluster/core/cert-manager/letsencrypt-staging.yaml
+++ b/cluster/core/cert-manager/letsencrypt-staging.yaml
@@ -9,31 +9,12 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
-    - selector:
-        dnsZones:
-        - "${SECRET_DOMAIN}"
-      dns01:
-        azuredns:
-          clientID: 3d34c319-a275-4253-beb9-2af0c4f4a845
-          clientSecretSecretRef:
-            name: azuredns-config
-            key: client-secret
-          subscriptionID: 78c9dcb6-b6af-4d0b-b416-6859e93af9ff
-          tenantID: ff2dff15-a00a-4491-a57e-48a7b696b0a8
-          resourceGroupName: dns-services
-          hostedZoneName: "${SECRET_DOMAIN}"
-          environment: AzurePublicCloud
-    - selector:
-        dnsZones:
-        - "ryanholt.net"
-      dns01:
-        azuredns:
-          clientID: 3d34c319-a275-4253-beb9-2af0c4f4a845
-          clientSecretSecretRef:
-            name: azuredns-config
-            key: client-secret
-          subscriptionID: 78c9dcb6-b6af-4d0b-b416-6859e93af9ff
-          tenantID: ff2dff15-a00a-4491-a57e-48a7b696b0a8
-          resourceGroupName: dns-services
-          hostedZoneName: ryanholt.net
-          environment: AzurePublicCloud
+      - selector:
+          dnsZones:
+            - "${SECRET_DOMAIN}"
+          dns01:
+            cloudflare:
+              email: "${SECRET_EMAIL}"
+              apiKeySecretRef:
+                name: cloudflare-token-secret
+                key: cloudflare-token
