--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: flux-system
 stringData:
   SECRET_DOMAIN: ENC[AES256_GCM,data:7PdZUHFhoaMIXQKr,iv:wY5azxHD+Kgck/XJ1Ty1MYjxkqAuMr7+lxYz1FoXWAA=,tag:OHKIFnNli/GO/vp1uchAMQ==,type:str]
+  SECRET_EMAIL: ENC[AES256_GCM,data:6V6TB94qSRABzlWnP2b2ozA=,iv:/z0uOCglc5lfpbbyyybQGbfb9i8plI5fjlKMfNIJMJA=,tag:wEvuvDwf4il1QJvsqXPerA==,type:str]
   SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:GhlAUKKQZi8PVzfH7+NCNrrtgco9redOBVWqt32WeaojRthq0FV1KjwbR+9L8NgsYIIHws9cEPkeXzcYiMW2CbyzYM37tLSJhQ/4Mt7zrK4tfGOn65ak3XxdzVR0f5dO4N7utld6mtCE+UqkMJovDWaI5D0Yo3Bx0P0uodqn,iv:g/hYI+iXdsJkdfbZpAFmfE2WVHZv238kIlAAOp5euNI=,tag:6Hw2V0gaEa1rauqC26T44A==,type:str]
   SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:KDDYtNQc6WrUe/3ZoCRab89nPIcqdWw0EcApQRzh9ER5KXXF7gQhXzCJuVmvLoF+,iv:KWDPQjNg3wc2QiUJafTHwVikwxOjcSHGSkBXkM1Niu0=,tag:3Wy8FBNda2LdyfiFXCcbaw==,type:str]
   SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:PSPtzb1eIzUnRtoAumI=,iv:HaJPQ/o4SM4g9a9HZ9fLhv8Ypj55IRrsiprU+SMH7II=,tag:EOGk2vx3BV4bn+tnaqJR6A==,type:str]
@@ -57,8 +58,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-11T23:03:55Z"
-  mac: ENC[AES256_GCM,data:jysaOvI5rYtsreIi4piW+XzbniWh1WsBnP2JHJrmRJCuiUuW/eeOE09WeNtOslhxjTNPS21Utc5cCDZAoStyW82Ro3ndyNDzEB7u2tI8waS565xO1GGtbISlFW7+333bvCMy2T9o18RzQ63L9ed5Yz77ql/vFRhDnzBJhQf2m+Y=,iv:6C4koyktJP3SlaCWjDF+3Hx7tFF4BBCnImVFptTxu4k=,tag:/0llBethoafY9kuhjF3zlw==,type:str]
+  lastmodified: "2021-08-18T20:24:46Z"
+  mac: ENC[AES256_GCM,data:tHnSbOOn945+vgCAdKPcaniKW5tdpj5/ljNj13j6XDoGkyY5rvk87wdF52UNDWus5OyjUPfqms439dlWs5CJraXYUPfkqZBMm67NtqKYTWVk33kNK2Q8q+AjJG/shg+tbBKFL1dURzfJHoOrliuqVDoHFcy6b7vEOEHz1rL3Axc=,iv:yVnQXtagZVwaGXIrAEmPUucQUfKYVOvPc4Fh03YfnV8=,tag:IwyJVu2DYTA0zk9KAvwJKg==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
